# bibsight

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: architecture.md
scripts/: search_bib.py  visualize.py
src/: config.py  pipeline.py
src/detection/: detector.py
src/faces/: embedder.py
src/ingest/: loader.py
src/linking/: linker.py
src/ocr/: reader.py
src/storage/: writer.py
tests/: test_linker.py  test_loader.py  test_ocr.py  test_storage.py
