[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibsight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3",
    "easyocr>=1.7",
    "insightface>=0.7",
    "onnxruntime-gpu",
    "numpy>=2.0",
    "pillow>=10",
    "opencv-python-headless>=4.10",
    "pydantic-settings>=2.0",
    "structlog>=24",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "black>=24", "pytest>=8", "pytest-cov>=5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
